[ADD] EnemySinusoidal script

--- a/game/rtype/CMakeLists.txt
+++ b/game/rtype/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(${LIBRARY} STATIC
         src/sceneController/BindingController.cpp
         src/scripts/DataHolder.cpp
         src/scripts/EnemyLinear.cpp
+        src/scripts/EnemySinusoidal.cpp
 )
 
 target_include_directories(${LIBRARY}
